--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,9 +9,9 @@ html(lang="ru" prefix="og: http://ogp.me/ns#")
 		meta(name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE")
 		meta(name="cmsmagazine" content="d8e7426ec72ad3e4ea38b09ebf01284c")
 		title Font Family: #{ttl}
-		//- base(href="https://nice-studio.github.io/" + git + "/")
-		//- link(rel="shortcut Icon" href="https://nice-studio.github.io/" + git + "/favicon.ico" type="image/x-icon")
-		//- link(rel="icon" href="https://nice-studio.github.io/" + git + "/favicon.ico" type="image/x-icon")
+		base(href="https://nice-studio.github.io/" + git + "/")
+		link(rel="shortcut Icon" href="https://nice-studio.github.io/" + git + "/favicon.ico" type="image/x-icon")
+		link(rel="icon" href="https://nice-studio.github.io/" + git + "/favicon.ico" type="image/x-icon")
 		meta(name="robots" content="index, follow")
 		meta(name="title" content="Font Family: " + ttl)
 		meta(name="description" content="Font Family: " + ttl)
