--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,8 +1,5 @@
-@import "variables";
-@fontfamily: 'Rubik';
-@fontfamilyos: 'Rubik';
-
 @import "mixin";
+@import "fontface";
 body {
 	font-family: '@{fontfamily}';
 	font-size: 26px;
